Update unused attributes in autogenerated file
