# internal/handlers/taskHandlers.go
@@ -10,7 +10,13 @@ type Handler struct {
 	Service *taskService.TaskService
 }
 
-func (h *Handler) GetApiTasks(ctx context.Context, request tasks.GetApiTasksRequestObject) (tasks.GetApiTasksResponseObject, error) {
+func NewHandler(service *taskService.TaskService) *Handler {
+	return &Handler{
+		Service: service,
+	}
+}
+
+func (h *Handler) GetApiTasks(_ context.Context, _ tasks.GetApiTasksRequestObject) (tasks.GetApiTasksResponseObject, error) {
 	//TODO implement me
 	allTasks, err := h.Service.GetAllTasks()
 	if err != nil {
@@ -29,7 +35,7 @@ func (h *Handler) GetApiTasks(ctx context.Context, request tasks.GetApiTasksRequ
 	return response, nil
 }
 
-func (h *Handler) PostApiTasks(ctx context.Context, request tasks.PostApiTasksRequestObject) (tasks.PostApiTasksResponseObject, error) {
+func (h *Handler) PostApiTasks(_ context.Context, request tasks.PostApiTasksRequestObject) (tasks.PostApiTasksResponseObject, error) {
 	taskRequest := request.Body
 	taskToCreate := taskService.Task{
 		Task:   *taskRequest.Task,
@@ -47,8 +53,34 @@ func (h *Handler) PostApiTasks(ctx context.Context, request tasks.PostApiTasksRe
 	return response, nil
 }
 
-func NewHandler(service *taskService.TaskService) *Handler {
-	return &Handler{
-		Service: service,
+func (h *Handler) PatchApiTasksId(_ context.Context, request tasks.PatchApiTasksIdRequestObject) (tasks.PatchApiTasksIdResponseObject, error) {
+	id := request.Id
+
+	taskRequest := request.Body
+
+	taskToUpdate := taskService.Task{
+		Task:   *taskRequest.Task,
+		IsDone: *taskRequest.IsDone,
 	}
+	updatedTask, err := h.Service.UpdateTaskByID(uint(id), taskToUpdate)
+	if err != nil {
+		// Return an error response if the update fails
+		return nil, err
+	}
+	response := tasks.PatchApiTasksId200JSONResponse{
+		Id:     &updatedTask.ID,
+		Task:   &updatedTask.Task,
+		IsDone: &updatedTask.IsDone,
+	}
+	return response, nil
+
+}
+
+func (h *Handler) DeleteApiTasksId(_ context.Context, request tasks.DeleteApiTasksIdRequestObject) (tasks.DeleteApiTasksIdResponseObject, error) {
+	id := request.Id
+	err := h.Service.DeleteTaskByID(uint(id))
+	if err != nil {
+		return nil, err
+	}
+	return tasks.DeleteApiTasksId204Response{}, nil
 }
